- Afterthought: Completed PickFrom and PickedFromExecutor - Static method for getting latest values in sequence of initialization, get, and setfields - Fix in SymbolicExecution.select(Sarray.ScharSarray, Sint) - Renamed AbstractIncrementalEnabledSolverManager.getArrayConstraintsForSarray and AbstractIncrementalEnabledSolverManager.getConstraintsForPartnerClassObject to AbstractIncrementalEnabledSolverManager.getArrayConstraintsForSarrayAndAliases and AbstractIncrementalEnabledSolverManager.getConstraintsForPartnerClassObjectAndAliases - Introduced support for enumerating objects in solutions alongside various symbolic identifiers